k8s/deployment-blue.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app-blue
  namespace: my-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: my-app
      version: blue
  template:
    metadata:
      labels:
        app: my-app
        version: blue
    spec:
      imagePullSecrets:
      - name: harbor-secret
      containers:
      - name: my-app
        image: 10.0.0.208/library/my-app:v1
        ports:
        - containerPort: 5000
