k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-app
  namespace: my-app
  labels:
    app: my-app
spec:
  selector:
    app: my-app
    version: blue # <- green으로 수정하면 트래픽 전환
  ports:
  - name: http          # ServiceMonitor 연동 시 name 필드 필수
    port: 80
    targetPort: 5000
